--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin:'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
     defaultConfig {
         applicationId "com.joyfulmath.calculator"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        //打破65k方法的限制
+        multiDexEnabled true
+        buildConfigField "String", "buglyId", "\"a5ccc98e68\""
     }
     buildTypes {
         release {
@@ -21,6 +24,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation rootProject.ext.dependencies.appcompatV7
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
