--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,5 +22,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies.appcompatV7
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile rootProject.ext.dependencies.multidex
+    compile rootProject.ext.dependencies.bugly
+    compile rootProject.ext.dependencies.nativecrash
+    compile rootProject.ext.dependencies.percent
+    compile rootProject.ext.dependencies.recyclerview
+    compile rootProject.ext.dependencies.gson
 }
